--- a/index.html
+++ b/index.html
@@ -270,10 +270,10 @@
                 </h2>
                 <form>
                 <fieldset class="full-width">
-                    <label style="font-weight: bolder;">Nom et prénom</label><input type="text" /><input type="text" />
+                    <label style="font-weight: bolder;">Nom et prénom</label><input type="text" name = "firstName" id="firstName"/><input type="text" name = "lastName" id="lastName" />
                 </fieldset>
                 <fieldset class="half-width">
-                    <label style="font-weight: bolder">Nombre d'invité(es): </label><input type="text" />
+                    <label style="font-weight: bolder">Nombre d'invité(es): </label><input type="text" name = "number" id="number"/>
                 </fieldset>
                 <fieldset class="checkbox">
                     <label class="container">Oui, nous y serons ! <input type="checkbox" checked="checked"><span class="checkmark"></span></label>
@@ -282,9 +282,9 @@
                     <label class="container">Désolé, nous ne pourrons pas être là... <input type="checkbox" checked="checked"><span class="checkmark"></span></label>
                 </fieldset>
                 <fieldset class="full-width">
-                    <label style="font-weight: bolder">Message aux mariés:</label><input class="diet" type="text" /><input class="diet" type="text" />
+                    <label style="font-weight: bolder">Message aux mariés:</label><input class="diet" type="text" name = "message1" id="message1" /><input class="diet" type="text" type="text" name = "message2" id="message2" />
                 </fieldset>
-                <button type="button">Envoyer</button>
+                <button type="button"><input type = "submit"/>Envoyer</button>
                 </form>
             </div>
         </div>
