--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 <fieldset class="full-width">
                     <label style="font-weight: bolder">Message aux mariés:</label><input class="diet" type="text" name = "message1" id="message1" /><input class="diet" type="text" type="text" name = "message2" id="message2" />
                 </fieldset>
-                <button type="button"><input type = "submit"/>Envoyer</button>
+                <button type="submit">Envoyer</button>
                 </form>
             </div>
         </div>
