--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <h2 class="tel">
                     Mariage de <br> David & Rebecca <br> Mardi 30 Mai 2023
                 </h2>
-                <form>
+                <form action="php.php">
                 <fieldset class="full-width">
                     <label style="font-weight: bolder;">Nom et prénom</label><input type="text" name = "firstName" id="firstName"/><input type="text" name = "lastName" id="lastName" />
                 </fieldset>
